--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=udp_client
+application.vendor=Kubala
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/udp_client.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
@@ -42,7 +44,7 @@ javac.test.classpath=\
     ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
-javadoc.additionalparam=
+javadoc.additionalparam=-docletpath "D:\\Program Files\\NetBeans 8.0.1\\yworks-uml-doclet-3.0_02-jdk1.5\\lib\\ydoc.jar" -resourcepath "D:\\Program Files\\NetBeans 8.0.1\\yworks-uml-doclet-3.0_02-jdk1.5\\resources" -doclet ydoc.doclets.YStandard -umlautogen
 javadoc.author=false
 javadoc.encoding=${source.encoding}
 javadoc.noindex=false
